[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "opendpd"
version = "2.0.0"
description = "An end-to-end learning framework for modeling power amplifiers and digital pre-distortion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chang Gao", email = "chang.gao@tudelft.nl"},
    {name = "Yizhuo Wu", email = "yizhuo.wu@tudelft.nl"},
    {name = "Ang Li", email = "a.li-2@tudelft.nl"},
]
maintainers = [
    {name = "Chang Gao", email = "chang.gao@tudelft.nl"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4.0",
    "numpy>=2.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "tqdm>=4.62.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/OpenDPD"
Documentation = "https://github.com/yourusername/OpenDPD/blob/main/README.md"
Repository = "https://github.com/yourusername/OpenDPD"
Issues = "https://github.com/yourusername/OpenDPD/issues"

[tool.setuptools]
py-modules = ["arguments", "project", "models", "main"]

[tool.setuptools.packages.find]
include = [
    "opendpd",
    "opendpd.*",
    "modules",
    "modules.*",
    "steps",
    "steps.*",
    "utils",
    "utils.*",
    "quant",
    "quant.*",
    "backbones",
    "backbones.*",
    "datasets",
    "datasets.*"
]

[tool.setuptools.package-data]
datasets = ["*/spec.json", "*/*.csv"]

